# frontier_based_exploration

./: .gitmodules  CMakeLists.txt  README.md  package.xml
frontier_based_exploration/: CMakeLists.txt  README.md
frontier_based_exploration/include/frontier_based_exploration/: frontier.h  frontier_cluster.h
frontier_based_exploration/launch/: frontier_based_exploration.launch
frontier_based_exploration/src/: frontier.cpp  frontier_based_exploration.cpp  frontier_based_exploration_node.cpp  utils.cpp
include/frontier_based_exploration/: frontier_based_exploration.h  utils.h
include/mavros_navigation/: 3DFrontierBasedExploration.h  frontier.h  frontier_based_exploration.h  frontier_cluster.h  octomap_utils.h  utils.h
launch/: frontier_based_exploration.launch  mavros_navigation.launch
src/: fronter_based_exploration.cpp  frontier.cpp  frontier_based_exploration.cpp  frontier_cluster.cpp  mavros_navigation_node.cpp  octomap_utils.cpp  utils.cpp
uav_navigation/: CMakeLists.txt  package.xml
